--- a/primerpeso2/locale/es_PR/LC_MESSAGES/django.po
+++ b/primerpeso2/locale/es_PR/LC_MESSAGES/django.po
@@ -3,19 +3,19 @@
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
-#, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2016-07-20 22:18+0000\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"POT-Creation-Date: 2016-07-21 20:55+0000\n"
+"PO-Revision-Date: 2016-07-21 16:39-0400\n"
+"Last-Translator: \n"
+"Language-Team: \n"
+"Language: es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"X-Generator: Poedit 1.8.8\n"
 
 #: primerpeso/models.py:16
 msgid "Made On"
@@ -371,35 +371,35 @@ msgstr "Formulario de solicitud de Primerpeso"
 
 #: primerpeso/templates/primerpeso/email.txt:5
 msgid "Serach Terms"
-msgstr ""
+msgstr "Términos de búsqueda"
 
 #: primerpeso/templates/primerpeso/email.txt:6
 msgid "Purpose"
-msgstr ""
+msgstr "Proposito"
 
 #: primerpeso/templates/primerpeso/email.txt:7
 msgid "Investing own money"
-msgstr ""
+msgstr "Invertir dinero propio"
 
 #: primerpeso/templates/primerpeso/email.txt:8
 msgid "Gender"
-msgstr ""
+msgstr "Género"
 
 #: primerpeso/templates/primerpeso/email.txt:9
 msgid "Type of Business"
-msgstr ""
+msgstr "Tipo de Negocio"
 
 #: primerpeso/templates/primerpeso/email.txt:10
 msgid "Industry"
-msgstr ""
+msgstr "Industria"
 
 #: primerpeso/templates/primerpeso/email.txt:11
 msgid "Business locations"
-msgstr ""
+msgstr "Ubicaciones del Negocio"
 
 #: primerpeso/templates/primerpeso/email.txt:12
 msgid "Number of employees"
-msgstr ""
+msgstr "Número de empleados"
 
 #: primerpeso/templates/primerpeso/email.txt:13
 #, fuzzy
@@ -409,15 +409,15 @@ msgstr "años como mínimo en los negocios"
 
 #: primerpeso/templates/primerpeso/email.txt:14
 msgid "Annual Revenue"
-msgstr "los Ingresos Anuales"
+msgstr "Ingresos Anuales"
 
 #: primerpeso/templates/primerpeso/email.txt:16
 msgid "Contact Information"
-msgstr ""
+msgstr "Información de contacto"
 
 #: primerpeso/templates/primerpeso/email.txt:17
 msgid "Name"
-msgstr "Nombre y apelli"
+msgstr "Nombre y apellidos"
 
 #: primerpeso/templates/primerpeso/email.txt:18
 msgid "Phone"
@@ -435,27 +435,27 @@ msgstr "Municipio"
 #: primerpeso/templates/primerpeso/email.txt:23
 #: primerpeso/templates/primerpeso/email.txt:29
 msgid "State"
-msgstr ""
+msgstr "Estado"
 
 #: primerpeso/templates/primerpeso/email.txt:25
 msgid "Other Business Information"
-msgstr ""
+msgstr "Información adicional del negocio"
 
 #: primerpeso/templates/primerpeso/email.txt:26
 msgid "Incorporated"
-msgstr "Incorpora"
+msgstr "Incorporado(a)"
 
 #: primerpeso/templates/primerpeso/email.txt:27
 msgid "Company Legal Name"
-msgstr ""
+msgstr "Nombre legal de la Empresa"
 
 #: primerpeso/templates/primerpeso/email.txt:32
 msgid "Requested Program Opportunities"
-msgstr ""
+msgstr "Oportunidades del Programa Solicitadas"
 
 #: primerpeso/templates/primerpeso/email.txt:37
 msgid "**Use ReplyAll to respond to contact\\"
-msgstr ""
+msgstr "Use \"ReplyAll\" para responder al contacto"
 
 #: primerpeso/templates/primerpeso/search_results.html:46
 msgid "Remove"
